--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 <body>
     <nav id="out-nav"></nav>
     
-    <header class="titulo">
-        <h1>Drock Verso</h1>
+    <header>
+        <h1 class="titulo">Drock Verso</h1>
     </header>
 
     <main class="ficha-container">
